nginx-ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: mcp
spec:
  defaultBackend:
    service:
      name: demo
      port:
        number: 80
  ingressClassName: nginx # Ensure this matches the IngressClass defined in ingressclass.yaml
  rules:
      - http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: demo
                  port:
                      number: 80
